# naer-mcp

./: .gitignore  FastMCP_Tutorial.md  README.md  pyproject.toml  requirements.txt
src/naer_mcp/: __init__.py  __main__.py  server.py
src/naer_mcp/example/: __init__.py
src/naer_mcp/memo/: __init__.py
tests/: test_example.py  test_import.py
